[package]
name = "ausfll-score-calculator-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.13"
serde = "1.0.188"
serde_json = "1.0.105"
wasm-bindgen = "0.2.76"
