[package]
name = "ausfll-score-calculator"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
schema-utils = { path = "schema-utils" }
schemars = "0.8.13"
serde = "1.0.188"
serde_json = "1.0.105"

[build-dependencies]
schema-utils = { path = "schema-utils" }
schemars = "^0.8"
anyhow = "^1.0.70"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
