[package]
name = "ausfll-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fll-games = { path = "../fll-games" }
paste = "1.0.14"
serde = "1.0.188"
serde_json = "1.0.105"
wasm-bindgen = { version = "0.2.87", features = ["serde"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
