[package]
name = "schema-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = []

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release-wasm]
inherits = "release"

[dependencies]
paste = "1.0.14"
schemars = "0.8.13"
serde = "1.0.188"
serde_json = "1.0.105"
wasm-bindgen = { version = "0.2.87", features = ["serde"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[build-dependencies]
schemars = "^0.8"
anyhow = "^1.0.70"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
